<resources>
    <string name="app_name">BMI Calculator</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="enter_weight">Enter weight</string>
    <string name="enter_height">Enter height</string>
    <string name="enter_age">Enter age</string>
    <string name="home">Home</string>
    <string name="bmi">BMI</string>
    <string name="calories">Calories</string>
    <string name="recipes">Recipes</string>
    <string name="graph">Graph</string>
    <string name="quiz">Quiz</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="recipe1_title">Quick fried rice</string>
    <string name="recipe1_content">Heat the oil in a frying pan, then tip in the egg. Leave to set for 30 secs-1 min, swirling every now and again, then tip it out and finely slice. Add the bacon and mushrooms to pan, then fry until golden, about 3 mins. Add the peas, garlic and ginger, then cook for 1 min.</string>
    <string name="recipe2_title">Pork noodle stir-fry</string>
    <string name="recipe2_content">Heat the oil in a wok or frying pan. Add the mince, break it up with a spoon and fry over a high heat for about 8 mins until browning. While the meat cooks, boil a kettle, then pour the hot water over the noodles. Set aside for 5-10 mins to soften.</string>
</resources>
