<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_bmi"
            android:title="@string/bmi" />
        <item
            android:id="@+id/nav_calories"
            android:title="@string/calories" />
        <item
            android:id="@+id/nav_recipes"
            android:title="@string/recipes" />
        <item
            android:id="@+id/nav_graph"
            android:title="@string/graph" />
        <item
            android:id="@+id/nav_quiz"
            android:title="@string/quiz" />
    </group>
</menu>