<?xml version="1.0" encoding="utf-8"?>
<GridLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".RecipesActivity"
    android:columnCount="4"
    android:useDefaultMargins="true">

    <Button
        android:id="@+id/button"
        android:layout_row="5"
        android:layout_column="0"
        android:text="@string/logo" />

    <Button
        android:id="@+id/button1"
        android:layout_row="5"
        android:layout_column="1"
        android:onClick="launchMain"
        android:text="@string/bmi" />

    <Button
        android:id="@+id/button2"
        android:layout_row="5"
        android:layout_column="2"
        android:text="@string/calories" />

    <Button
        android:id="@+id/button3"
        android:layout_row="5"
        android:layout_column="3"
        android:text="@string/recipes" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="0"
        android:layout_column="0"
        android:layout_columnSpan="4"
        android:text="@string/recipe1_title"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_column="0"
        android:layout_columnSpan="4"
        android:text="@string/recipe1_content" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="2"
        android:layout_column="0"
        android:layout_columnSpan="4"
        android:text="@string/recipe2_title"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="3"
        android:layout_column="0"
        android:layout_columnSpan="4"
        android:text="@string/recipe2_content" />

</GridLayout>