<?xml version="1.0" encoding="utf-8"?>
<GridLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".LogoFragment"
    android:columnCount="4"
    android:useDefaultMargins="true">

    <Button
        android:id="@+id/logoButton"
        android:layout_row="5"
        android:layout_column="0"
        android:onClick="launchLogo"
        android:text="@string/logo" />

    <Button
        android:id="@+id/bmiButton"
        android:layout_row="5"
        android:layout_column="1"
        android:onClick="launchMain"
        android:text="@string/bmi" />

    <Button
        android:id="@+id/caloriesButton"
        android:layout_row="5"
        android:layout_column="2"
        android:onClick="launchCalories"
        android:text="@string/calories" />

    <Button
        android:id="@+id/recipesButton"
        android:layout_row="5"
        android:layout_column="3"
        android:onClick="launchRecipes"
        android:text="@string/recipes" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="182dp"
        android:layout_height="157dp"
        android:layout_row="2"
        android:layout_column="1"
        android:layout_columnSpan="2"
        tools:srcCompat="@tools:sample/avatars" />
</GridLayout>